--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</style>
 
 </head>
-      <img src="img/create-repo-on-github.jpg">
-			<img src="img/create-index-on-github.jpg">
+      <img src="create-repo-on-github.jpg">
+	<img src="create-index-on-github.jpg">
 </body>
 </html>
