--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 	</style>
 
 </head>
-      <img src="create-repo-on-github.jpg">
+        <img src="create-repo-on-github.jpg">
 	<img src="create-index-on-github.jpg">
+	<img src="upload-img-on-github.jpg">
+	<img src="saving-chanch-index-on-github.jpg">
 </body>
 </html>
